--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       <input type="password" id="password" placeholder="Password" required><br>
       <button type="submit">Login</button>
     </form>
+    <p style="text-align:center; margin-top: 10px;">
+  <a href="signup.html">Sign Up</a> | 
+  <a href="reset.html">Forgot Password?</a>
+</p>
   </div>
 </body>
 </html>
