--- a/semester1.html
+++ b/semester1.html
@@ -2,18 +2,97 @@
 <html>
 <head>
   <title>Semester 1</title>
-  <link rel="stylesheet" href="style.css">
-  <script>
-    if (!localStorage.getItem("authenticated")) window.location.href = "index.html";
-  </script>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #ffffff;
+      color: #000;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      width: 90%;
+      margin: 40px auto;
+    }
+    h2 {
+      text-align: center;
+      color: #b91c1c; /* أحمر غامق */
+      text-transform: uppercase;
+      margin-bottom: 30px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      border: 1px solid #ccc;
+      background-color: #fff;
+    }
+    th {
+      background-color: #f1f5f9;
+      color: #b91c1c;
+      text-align: left;
+      padding: 12px;
+      border-bottom: 2px solid #ccc;
+    }
+    td {
+      padding: 12px;
+      border-bottom: 1px solid #ddd;
+    }
+    td.grade {
+      background-color: #ffffff;
+      color: #000000;
+      font-weight: bold;
+      text-align: center;
+    }
+    tr:hover {
+      background-color: #f9f9f9;
+    }
+  </style>
 </head>
 <body>
-  <h2>Semester 1 Courses</h2>
-  <table>
-    <tr><th>Course</th><th>Grade</th></tr>
-    <tr><td>General Anatomy</td><td>84%</td></tr>
-    <tr><td>Dental Morphology</td><td>78%</td></tr>
-    <tr><td>Biophysics</td><td>80%</td></tr>
-  </table>
+  <div class="container">
+    <h2>Semester 1 - Courses</h2>
+    <table>
+      <tr>
+        <th>Subject</th>
+        <th>Hours</th>
+        <th>Grade</th>
+      </tr>
+      <tr>
+        <td>General histology, with cytology</td>
+        <td>5.0</td>
+        <td class="grade">71%</td>
+      </tr>
+      <tr>
+        <td>Basics of philosophy</td>
+        <td>5.0</td>
+        <td class="grade">70%</td>
+      </tr>
+      <tr>
+        <td>Foreign language - 1 (Georgian)</td>
+        <td>5.0</td>
+        <td class="grade">74%</td>
+      </tr>
+      <tr>
+        <td>Human normal anatomy for dentists</td>
+        <td>5.0</td>
+        <td class="grade">69%</td>
+      </tr>
+      <tr>
+        <td>Introduction of biochemistry</td>
+        <td>4.0</td>
+        <td class="grade">70%</td>
+      </tr>
+      <tr>
+        <td>Medical biology</td>
+        <td>3.0</td>
+        <td class="grade">72%</td>
+      </tr>
+      <tr>
+        <td>Biophysics</td>
+        <td>3.0</td>
+        <td class="grade">73%</td>
+      </tr>
+    </table>
+  </div>
 </body>
 </html>
