--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>CIU Student Portal</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: #ffffff; font-family: Arial, sans-serif; text-align: center;">
+<body>
+  <header style="text-align:center; padding: 20px;">
+    <img src="ciu-logo.png" alt="CIU Logo" style="width: 100px;">
+    <h1 style="color:#800000;">Caucasus International University</h1>
+  </header>
 
-  <div style="margin-top: 50px;">
-    <img src="ciu-logo.png" alt="CIU Logo" style="width: 180px;" />
-    <h1 style="color: #a10000; margin-top: 20px;">Caucasus International University</h1>
-    <h2 style="color: #333;">Student Portal</h2>
+  <main style="text-align:center; margin-top:50px;">
+    <h2>Welcome to the CIU Portal</h2>
+    <p>Please <a href="login.html">login</a> to access your account.</p>
+  </main>
 
-    <div style="margin-top: 40px;">
-      <a href="login.html">
-        <button style="padding: 10px 25px; font-size: 16px; background-color: #a10000; color: white; border: none; border-radius: 5px;">
-          Login
-        </button>
-      </a>
-    </div>
-  </div>
-
+  <footer style="text-align:center; margin-top:60px; font-size:14px; color:gray;">
+    &copy; 2025 Caucasus International University
+  </footer>
 </body>
 </html>
