--- a/login.html
+++ b/login.html
@@ -1,58 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>CIU | Login</title>
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <script>
-    (function() {
-      emailjs.init("1xYQGxOC2JBKdb3vC"); // Public Key
-    })();
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
     body {
-      font-family: Arial;
-      background: #f5f5f5;
-      text-align: center;
-      padding-top: 100px;
+      font-family: Arial, sans-serif;
+      background-color: #f8f8f8;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
-    input {
-      padding: 10px;
-      margin: 10px;
-      width: 250px;
-      font-size: 16px;
+    .container {
+      background-color: white;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    input[type="email"] {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border-radius: 5px;
+      border: 1px solid #ccc;
     }
     button {
-      padding: 10px 20px;
-      background-color: #800000;
+      background-color: #a4161a;
       color: white;
+      padding: 12px 25px;
       border: none;
-      font-size: 16px;
+      border-radius: 5px;
       cursor: pointer;
+    }
+    button:hover {
+      background-color: #821314;
     }
   </style>
 </head>
 <body>
-
-  <img src="ciu-logo.png" width="120" alt="CIU Logo">
-  <h2>Login</h2>
-  <input type="email" id="email" placeholder="Enter your CIU Email" required>
-  <br>
-  <button onclick="sendCode()">Login by E-Mail</button>
+  <div class="container">
+    <img src="ciu-logo.png" alt="CIU Logo" width="120" />
+    <h2>Login</h2>
+    <input type="email" id="user_email" placeholder="Enter your CIU E-Mail" value="mohammad.youness@ciu.edu.ge" />
+    <button onclick="sendVerificationCode()">Login by E-Mail</button>
+  </div>
 
   <script>
-    function generateCode() {
-      return Math.floor(100000 + Math.random() * 900000);
-    }
+    (function() {
+      emailjs.init("1xYQGxOC2JBKdb3vC"); // ✅ Public Key
+    })();
 
-    function sendCode() {
-      const email = document.getElementById("email").value;
-      const code = generateCode();
+    function sendVerificationCode() {
+      const email = document.getElementById("user_email").value;
 
-      if (!email.endsWith("@ciu.edu.ge")) {
-        alert("Please use your CIU email address.");
+      if (!email) {
+        alert("Please enter your email.");
         return;
       }
+
+      const code = Math.floor(100000 + Math.random() * 900000); // 6-digit random code
 
       const templateParams = {
         to_email: email,
@@ -62,15 +72,13 @@
       emailjs.send("service_th5035j", "template_90zrpeq", templateParams)
         .then(function(response) {
           alert("Verification code sent to your email.");
-          localStorage.setItem("ciu-login-code", code);
-          localStorage.setItem("ciu-login-email", email);
-          window.location.href = "verify.html";
+          // يمكنك حفظ الكود في LocalStorage مؤقتًا للمقارنة لاحقًا
+          localStorage.setItem("login_code", code);
         }, function(error) {
           alert("Failed to send code. Please try again.");
-          console.log("EmailJS error:", error);
+          console.error(error);
         });
     }
   </script>
-
 </body>
 </html>
