--- a/verify.html
+++ b/verify.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Verify Code</title>
-  <style>
-    body { font-family: Arial; text-align: center; padding: 50px; }
-    input, button { margin: 10px; padding: 10px; width: 250px; }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h2>Enter Verification Code</h2>
-  <input type="text" id="codeInput" placeholder="Enter the code" />
-  <button onclick="verifyCode()">Verify</button>
+  <div class="verify-container">
+    <h2>Enter Verification Code</h2>
+    <input type="text" id="codeInput" placeholder="6-digit code" />
+    <button onclick="verifyCode()">Verify</button>
+  </div>
 
   <script>
     function verifyCode() {
-      const userCode = document.getElementById("codeInput").value;
-      const savedCode = localStorage.getItem("verificationCode");
+      const enteredCode = document.getElementById("codeInput").value.trim();
+      const storedCode = localStorage.getItem("verificationCode");
 
-      if (userCode === savedCode) {
+      if (enteredCode === storedCode) {
         alert("Login successful!");
-        window.location.href = "student-dashboard.html"; // عدل حسب صفحة الطالب
+        window.location.href = "dashboard.html"; // يمكنك تغييره
       } else {
         alert("Invalid code. Please try again.");
       }
